--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "boilerplate-RN-app",
   "version": "0.0.5",
   "description": "React Native Template",
-  "repository": "git@github.com:Rakesh-cell/bolierplate-RN-app.git",
+  "repository": "https://github.com/Rakesh-cell/bolierplate-RN-app.git",
   "author": "Rakesh <rakm030@gmail.com>",
   "license": "MIT"
 }
